# lines-of-work

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
docs/: generation_pipeline_playbook.md  guidance_of_new_work.md  index.md
lines_of_work/: __init__.py  types.py
lines_of_work/industries/accommodation_food_services/: __init__.py
lines_of_work/industries/accommodation_food_services/beverage_shops/: __init__.py
lines_of_work/industries/accommodation_food_services/catering_services/: __init__.py
lines_of_work/industries/accommodation_food_services/restaurants/: __init__.py
lines_of_work/industries/accommodation_food_services/short_term_accommodation/: __init__.py
lines_of_work/industries/administrative_support/: __init__.py
lines_of_work/industries/administrative_support/cleaning_landscaping/: __init__.py
lines_of_work/industries/administrative_support/hr_employment_services/: __init__.py
lines_of_work/industries/administrative_support/office_admin_support/: __init__.py
lines_of_work/industries/administrative_support/rental_leasing/: __init__.py
lines_of_work/industries/administrative_support/security_investigation/: __init__.py
lines_of_work/industries/agriculture_natural_resources/: __init__.py
lines_of_work/industries/arts_entertainment_recreation/: __init__.py
lines_of_work/industries/construction_civil_eng/: __init__.py
lines_of_work/industries/education/: __init__.py
lines_of_work/industries/education/educational_support/: __init__.py
lines_of_work/industries/energy_utilities/: __init__.py
lines_of_work/industries/finance_insurance/: __init__.py
lines_of_work/industries/healthcare_social_work/: __init__.py
lines_of_work/industries/information_communication/: __init__.py
lines_of_work/industries/international_organizations/: __init__.py
lines_of_work/industries/manufacturing_heavy_tech/: __init__.py
lines_of_work/industries/manufacturing_light/: __init__.py
lines_of_work/industries/other_services/: __init__.py
lines_of_work/industries/professional_scientific_tech/: __init__.py
lines_of_work/industries/public_admin_defense/: __init__.py
lines_of_work/industries/real_estate/: __init__.py
lines_of_work/industries/transportation_warehousing/: __init__.py
lines_of_work/industries/wholesale_retail/: __init__.py
lines_of_work/lines_of_work/utils/: generate_agent_open_queries.py  truncate_str.py
lines_of_work/utils/: generate_agent_open_queries.py  generate_user_queries_answer_in_context.py  generate_user_queries_answer_not_in_context.py  get_random_language.py
tests/: test_basic.py
(+34609 files in other folders)
