[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = ["pydantic (>=2)"]
description = "All lines of work."
license = { text = "MIT" }
name = "lines-of-work"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.0.3"

[project.urls]
Homepage = "https://github.com/allen2c/lines-of-work"
"PyPI" = "https://pypi.org/project/lines-of-work/"
Repository = "https://github.com/allen2c/lines-of-work"

[tool.poetry]
packages = [{ include = "lines_of_work" }]

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
codepress = "*"
isort = "*"
openai = "*"
openai-agents = "*"
openai-embeddings-model = ">=0.5.0,<1.0.0"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
rich = "*"
rich-color-support = "*"
setuptools = "*"
tiktoken = "*"
twine = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]

[tool.pyright]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/build",
  "**/dist",
  "**/node_modules",
  "**/venv",
  "lines_of_work",
]
typeCheckingMode = "off"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
